Add unit + slice tests for identity, observation, and notification services
Fixes two production bugs uncovered by the tests: AggregateRoot.pullDomainEvents()
returned an unmodifiable view of the list and then cleared it (making the return value
always empty); @PathVariable UUID fields in ObservationController and
NotificationController lacked explicit names, crashing without the -parameters flag.
27 tests pass across all three services.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>